<resources>
    <string name="app_name">Kode</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchView_hint">Введите имя, тег, почту...</string>
    <string name="filter_item_menu">Фильтр</string>
    <string name="item_tab_all">Все</string>
    <string name="item_tab_android">Android</string>
    <string name="item_tab_ios">iOS</string>
    <string name="item_tab_design">Дизайн</string>
    <string name="item_tab_management">Менеджмент</string>
    <string name="item_tab_qa">QA</string>
    <string name="item_tab_back_office">Бэк-офис</string>
    <string name="item_tab_frontend">Frontend</string>
    <string name="item_tab_hr">HR</string>
    <string name="item_tab_pr">PR</string>
    <string name="item_tab_backend">Backend</string>
    <string name="item_tab_support">Техподдержка</string>
    <string name="item_tab_analytics">Аналитика</string>
    <string name="tv_search_empty_text1">Мы никого не нашли</string>
    <string name="tv_search_empty_text2">Попробуй скорректировать запрос</string>
    <string name="tv_sort_text">Сортировка</string>
    <string name="snackBarApiError">Не могу обновить данные. \nЧто-то пошло не так</string>
    <string name="snackBarInternetError">Не могу обновить данные.\nПроверьте соединение с интернетом.</string>
    <string name="snackBarStatus">Секундочку, гружусь...</string>
    <string name="details_tv1_text">Какой-то сверхразум все сломал</string>
    <string name="details_tv2_text">Постараемся быстро починить</string>
    <string name="details_tv3_text">Попробовать снова</string>
    <string name="radio_button_alphabet">По алфавиту</string>
    <string name="radio_button_birthday">По дню рождения</string>
</resources>
