<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.fragments.ErrorFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_flying_saucer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:src="@drawable/flying_saucer_1f6f8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/details_tv1_text"
                android:textColor="@color/tab_text_selected"
                android:textSize="17sp"
                app:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_flying_saucer" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_regular"
                android:text="@string/details_tv2_text"
                android:textColor="@color/tv_tag_text_color"
                android:textSize="16sp"
                app:fontFamily="@font/inter_regular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_1" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/details_tv3_text"
                android:textColor="@color/background_snackBar_color_status"
                android:textSize="16sp"
                app:fontFamily="@font/inter_semi_bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>